# thu-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: __init__.py  test_architecture.py
tests/integration/: test_live.py
tests/unit/: test_apps_realms.py  test_cli_json_mode.py  test_cli_output.py  test_cli_smoke.py  test_config_i18n.py  test_config_profiles.py  test_sdk_auth.py  test_sdk_transport.py  test_services_base.py  test_webvpn.py
thu_cli/: __init__.py  __main__.py
thu_cli/cli/: __init__.py  _common.py  main.py  output.py  prompts.py  shell.py
thu_cli/cli/commands/: __init__.py
thu_cli/cli/commands/academic/: __init__.py
thu_cli/cli/commands/auth/: __init__.py  login.py  logout.py  profile.py  status.py  use.py  verify.py  whoami.py
thu_cli/cli/commands/campus/: __init__.py
thu_cli/cli/commands/info/: __init__.py  calendar.py  timetable.py  transcript.py
thu_cli/cli/commands/learn/: __init__.py  announcement.py  course.py  discussion.py  file.py  homework.py  me.py  question.py  questionnaire.py
thu_cli/config/: __init__.py  i18n.py  profiles.py
thu_cli/core/: __init__.py  apps.py  endpoints.py  errors.py  realms.py  webvpn.py
thu_cli/sdk/: __init__.py  _literals.py  auth.py  info.py  learn.py  transport.py
thu_cli/services/: __init__.py  auth.py  base.py  info.py  learn.py
